# qt5

./: .gitignore  CMakeLists.txt  README.md
cm-lib/: CMakeLists.txt
cm-lib/src/controllers/: main-controller.cpp  main-controller.h
cm-tests/: CMakeLists.txt
cm-ui/: CMakeLists.txt  views.qrc
cm-ui/src/: main.cpp
cm-ui/views/: MainView.qml
cmake/: CompilerWarnings.cmake  GitFunction.cmake  StaticAnalyzers.cmake
